# Generative_Deep_Learning

./: .gitignore  02_01_deep_learning_deep_neural_network.ipynb  02_02_deep_learning_convolutions.ipynb  02_03_KerasConvModel.py  02_03_deep_learning_conv_neural_network.ipynb  03_01_autoencoder_train.ipynb  03_02_autoencoder_analysis.ipynb  03_03_vae_digits_train.ipynb  03_05_vae_faces_train.ipynb  04_03_wgangp_faces_train.ipynb  06_01_lstm_text_train.ipynb  07_01_notation_compose.ipynb  07_03_lstm_compose_predict.ipynb  09_01_positional_encoding.ipynb  AGENTS.md  MatplotlibAnatomy.py  README.md  agents.md  fix_vae_notebook.py  main.py  pyproject.toml  requirements.txt  requirements_uv.txt  sample.env  test_vae_fix.py
.gemini/: settings.json
docker/: README.md
documentation/: CALLBACKS.md  CELEBA_SETUP.md  DYNAMIC_BATCH_SIZE.md  GAN_GUIDE.md  GAN_TRAINING_METRICS.md  GAN_TRIAGE.md  GPU_SETUP.md  LR_TOOLS.md  MIGRATION_GUIDE.md  NOTEBOOK_STANDARDIZATION.md  NOTEBOOK_WORKFLOW.md  QUICKSTART.md  TRAINING_GUIDE.md  TRAINING_STABILITY_ANALYSIS_TEMPLATE.md  UV_SETUP.md  WANDB_SETUP.md  implementation_plan.md  walkthrough.md
generativeModel/: AutoEncoder.py
models/: AE.py  GAN.py  MuseGAN.py  RNNAttention.py  VAE.py  WGANGP.py  cycleGAN.py
scripts/: add_cleanup_cells.py  add_define_wgan_charts.py  add_dynamic_gpu_scaling.py  add_lrfinder_to_vae.py  add_wgan_experiment_logging.py  configure_gan_triage.py  correct_wgan_experiment_params.py  fix_03_01_config.py  fix_dnn_notebook.py  fix_epochs_init.py  fix_gan_notebook.py  fix_lrfinder_keras3.py  fix_vae_analysis_notebook.py  fix_vae_early_stopping.py  fix_vae_faces_notebook.py  fix_wgan_cifar_syntax_error.py  fix_wgan_experiment_url.py  gan_notebook_cells.py  refactor_training_dashboard.py  standardize_02_01_notebook.py  standardize_02_02_notebook.py  standardize_02_03_notebook.py  standardize_03_01_notebook.py  standardize_03_02_notebook.py  standardize_ae_analysis.py  standardize_gan_notebook.py  standardize_vae_digits_analysis.py  update_gan_seed.py  (+11 more)
(+75 files in other folders)
