[project]
name = "generative-deep-learning"
version = "0.1.0"
description = "Generative Deep Learning - O'Reilly Book Examples (Updated for TensorFlow 2.16+ / Keras 3.0+)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core Deep Learning
    "tensorflow[and-cuda]==2.20.0",
    "keras>=3.0.0",
    # Data Science
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "scikit-image>=0.22.0",
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    # Jupyter
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.27.0",
    "ipywidgets>=8.1.0",
    "ipympl>=0.9.0",
    "nbconvert>=7.0.0",
    # Music (for Chapter 7)
    "music21>=9.1.0",
    # Image Processing
    "pillow>=10.1.0",
    "imageio>=2.33.0",
    # Utilities
    "h5py>=3.10.0",
    "pyyaml>=6.0.0",
    "pydot>=2.0.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    # Additional
    "statsmodels>=0.14.0",
]
