[project]
name = "generative-deep-learning"
version = "2.0.0"
description = "Code from Generative Deep Learning 2nd Edition - O'Reilly"
readme = "README.md"
license = { file = "LICENCE" }
requires-python = ">=3.13"
dependencies = [
    "tensorflow[and-cuda]==2.20.0",
    "tensorboard>=2.15.0",
    "tensorflow-probability>=0.24.0",
    "matplotlib>=3.8.0",
    "jupyterlab>=4.0.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "scikit-image>=0.22.0",
    "pandas>=2.2.0",
    "music21>=9.1.0",
    "kaggle>=1.6.0",
    "pydot>=2.0.0",
    "ipywidgets>=8.1.0",
    "wandb>=0.16.0",
    "graphviz>=0.21",
]

[project.optional-dependencies]
dev = [
    "black[jupyter]>=24.0.0",
    "flake8>=3.8.0,<5.0.5",
    "flake8-nb>=0.5.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
